fix inset caption z-index

--- a/css/main.css
+++ b/css/main.css
@@ -949,6 +949,7 @@ section:last-of-type {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 30;
 }
 .caption-inset.right {
   right: 0;
